--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -7,3 +7,12 @@ dependencies:
   version: 2.3.89
   repository: http://chartmuseum.jenkins-x.io
   alias: cleanup
+- name: jetstack/cert-manager
+  version: v0.8.1
+  repository: https://charts.jetstack.io
+  alias: certmanager
+#- name: cloudbees/cloudbees-core
+#  version: 2.164.3.2
+#  repository: https://charts.cloudbees.com/public/cloudbees
+#  alias: cbcore
+
