--- a/env/values.yaml
+++ b/env/values.yaml
@@ -29,3 +29,26 @@ jenkins:
         TILLER_NAMESPACE: kube-system
   enabled: false
 prow: {}
+
+cbcore:
+  nginx-ingress:
+    Enabled: false
+
+  OperationsCenter:
+    HostName: 'cbcore.aks.kearos.net'
+    ServiceType: ClusterIP
+    CSRF:
+      ProxyCompatibility: true
+    Ingress:
+      Annotations:
+        certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+        kubernetes.io/ingress.class: nginx
+        kubernetes.io/tls-acme: "false"
+        nginx.ingress.kubernetes.io/app-root: https://$best_http_host/cjoc/teams-check/
+        nginx.ingress.kubernetes.io/proxy-body-size: 50m
+        nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+        nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      tls:
+        Enable: true
+        SecretName: tls-cbcore-aks-kearos-net
+        Host: cbcore.aks.kearos.net
