--- a/env/values.yaml
+++ b/env/values.yaml
@@ -51,3 +51,30 @@ jenkins:
         TILLER_NAMESPACE: kube-system
   enabled: false
 prow: {}
+
+cbcore:
+  nginx-ingress:
+    Enabled: false
+
+  OperationsCenter:
+    # Set the HostName for the Operation Center
+    HostName: 'cloudbees-core.aks.kearos.net'
+    # Setting ServiceType to ClusterIP creates ingress
+    ServiceType: ClusterIP
+    CSRF:
+      ProxyCompatibility: true
+    Ingress:
+      Annotations:
+        certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+        kubernetes.io/ingress.class: nginx
+        kubernetes.io/tls-acme: "false"
+        nginx.ingress.kubernetes.io/app-root: https://$best_http_host/cjoc/teams-check/
+        nginx.ingress.kubernetes.io/proxy-body-size: 50m
+        nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+        nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      tls:
+      ## Set this to true in order to enable TLS on the ingress record
+        Enable: true
+        # Create a certificate kubernetes and use it here.
+        SecretName: tls-cloudbees-core-kearos-net
+        Host: cloudbees-core.aks.kearos.net
