--- a/env/values.yaml
+++ b/env/values.yaml
@@ -1,25 +1,5 @@
 PipelineSecrets:
   DockerConfig: '{"auths":{"acctestaks1.azurecr.io":{"auth":"YWNjdGVzdGFrczE6Y05raFdrWVFGSGJFZWdHalpGanhPem01REhBYS8yT2w="}}}'
-cbcore:
-  OperationsCenter:
-    CSRF:
-      ProxyCompatibility: true
-    HostName: cbcore.aks.kearos.net
-    Ingress:
-      Annotations:
-        certmanager.k8s.io/cluster-issuer: letsencrypt-prod
-        kubernetes.io/ingress.class: nginx
-        kubernetes.io/tls-acme: "false"
-        nginx.ingress.kubernetes.io/app-root: https://$best_http_host/cjoc/teams-check/
-        nginx.ingress.kubernetes.io/proxy-body-size: 50m
-        nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-        nginx.ingress.kubernetes.io/ssl-redirect: "true"
-      tls:
-        Enable: true
-        Host: cbcore.aks.kearos.net
-        SecretName: tls-cbcore-aks-kearos-net
-    ServiceType: ClusterIP
-  nginx-ingress:
     Enabled: false
 cleanup:
   Annotations:
@@ -44,11 +24,11 @@ expose:
     exposer: Ingress
     http: "true"
   enabled: false
-jenkins:
-  Servers:
-    Global:
-      EnvVars:
-        TILLER_NAMESPACE: kube-system
+  #jenkins:
+  # Servers:
+  #  Global:
+  #    EnvVars:
+  #      TILLER_NAMESPACE: kube-system
   enabled: false
 prow: {}
 
