--- a/env/values.yaml
+++ b/env/values.yaml
@@ -1,5 +1,26 @@
 PipelineSecrets:
-  DockerConfig: '{"auths":{"acctestaks1.azurecr.io":{"auth":"YWNjdGVzdGFrczE6Y05raFdrWVFGSGJFZWdHalpGanhPem01REhBYS8yT2w="}}}'
+  DockerConfig: '{"auths":{"acctestaks1.azurecr.io":{"auth":"YWNjdGVzdGFrczE6MzVab00rWURreVk1SGpyalBOM3Y0U0t1cEIxVTVETDI="}}}'
+cbcore:
+  OperationsCenter:
+    CSRF:
+      ProxyCompatibility: true
+    HostName: cbcore.aks.kearos.net
+    Ingress:
+      Annotations:
+        certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+        kubernetes.io/ingress.class: nginx
+        kubernetes.io/tls-acme: "false"
+        nginx.ingress.kubernetes.io/app-root: https://$best_http_host/cjoc/teams-check/
+        nginx.ingress.kubernetes.io/proxy-body-size: 50m
+        nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+        nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      tls:
+        Enable: true
+        Host: cbcore.aks.kearos.net
+        SecretName: tls-cbcore-aks-kearos-net
+    ServiceType: ClusterIP
+  nginx-ingress:
+    Enabled: false
 cleanup:
   Annotations:
     helm.sh/hook: pre-delete
@@ -22,34 +43,11 @@ expose:
     domain: aks.kearos.net
     exposer: Ingress
     http: "true"
-# jenkins:
-#  Servers:
-#    Global:
-#      EnvVars:
-#        TILLER_NAMESPACE: kube-system
+  enabled: false
+jenkins:
+  Servers:
+    Global:
+      EnvVars:
+        TILLER_NAMESPACE: kube-system
   enabled: false
 prow: {}
-
-
-cbcore:
-  nginx-ingress:
-    Enabled: false
-
-  OperationsCenter:
-    HostName: 'cbcore.aks.kearos.net'
-    ServiceType: ClusterIP
-    CSRF:
-      ProxyCompatibility: true
-    Ingress:
-      Annotations:
-        certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
-        kubernetes.io/ingress.class: nginx
-        kubernetes.io/tls-acme: "false"
-        nginx.ingress.kubernetes.io/app-root: https://$best_http_host/cjoc/teams-check/
-        nginx.ingress.kubernetes.io/proxy-body-size: 50m
-        nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-        nginx.ingress.kubernetes.io/ssl-redirect: "true"
-      tls:
-        Enable: true
-        SecretName: tls-cbcore-aks-kearos-net
-        Host: cbcore.aks.kearos.net
