--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -7,10 +7,10 @@ dependencies:
   version: 2.3.89
   repository: http://chartmuseum.jenkins-x.io
   alias: cleanup
-- name: cloudbees-core
-  version: 2.164.302
-  repository: https://charts.cloudbees.com/public/cloudbees
-  alias: cbcore
+# - name: cloudbees-core
+#   version: 2.164.302
+#   repository: https://charts.cloudbees.com/public/cloudbees
+#   alias: cbcore
 - name: opendj4
   version: 0.2.0
   repository: https://raw.githubusercontent.com/joostvdg/helm-repo/master/
