--- a/env/templates/certmanager.yml
+++ b/env/templates/certmanager.yml
@@ -2410,3 +2410,37 @@ webhooks:
         namespace: default
         path: /apis/admission.certmanager.k8s.io/v1beta1/clusterissuers
 
+---
+
+apiVersion: certmanager.k8s.io/v1alpha1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    email: joostvdg@gmail.com
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    http01: {}
+
+---
+
+apiVersion: certmanager.k8s.io/v1alpha1
+kind: Certificate
+metadata:
+  name: cbcore.aks.kearos.net
+  namespace: jx-production
+spec:
+  secretName: tls-cbcore-aks-kearos-net
+  dnsNames:
+  - cbcore.aks.kearos.net
+  acme:
+    config:
+    - http01:
+        ingressClass: nginx
+      domains:
+      - cbcore.aks.kearos.net
+  issuerRef:
+    name: letsencrypt-prod
+    kind: ClusterIssuer
