--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -15,3 +15,12 @@ dependencies:
   version: 0.2.0
   repository: https://raw.githubusercontent.com/joostvdg/helm-repo/master/
   alias: ldap
+- name: prometheus
+  version: 7.1.3
+  repository: https://kubernetes-charts.storage.googleapis.com
+  alias: prom
+- name: grafana
+  version: 3.5.5
+  repository: https://kubernetes-charts.storage.googleapis.com
+  alias: grafana
+
